# siw-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt  siw_generator.spec
combination/: dualSIW.json  ranSIW.json  tripleSIW.json  tripleSIW2.json  tripleSIW3.json
docs/: AGENT_HISTORY.md  USER_GUIDE.md
examples/: generate_default_siw.py
module/: RSIW-0_7mmWidth.json  RSIW-0_9mmWidth.json  RSIW-SIW.json  SSIW-120GHz_Slot8.json  ctm-line1.json  ctm-rand1.json  ctm-randomDot.json  ctm-tesla1.json  ctm-test.json
recipe/: 200GHz-2.json  200GHz-3.json  200GHz.json  _last_session.json  teast1.json
releases/: ROLLBACK_0.9.0beta.txt  ROLLBACK_0.9.1beta.txt
scripts/: build_exe.ps1  generate_guide_images.py  gui_entry.py
src/siw_generator/: __init__.py  __main__.py  agent_history.py  app_paths.py  cli.py  combination_io.py  compose_cst_export.py  compose_geometry.py  compose_io.py  compose_mesh_export.py  compose_preview.py  console_encoding.py  cst_export.py  custom_dxf_import.py  custom_geometry.py  custom_io.py  custom_preview.py  dxf_export.py  export_paths.py  generator.py  gui.py  gui_compose.py  gui_cst_vba.py  gui_custom.py  gui_help_panel.py  gui_hfss.py  gui_module_panel.py  gui_preview.py  gui_slot.py  gui_state.py  hfss_export.py  materials.py  operation_log.py  param_report.py  preview.py  recipe_io.py  resource_info.py  siw_geometry.py  slot_geometry.py  stackup.py  (+3 more)
